--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "proxy": "https://drcronline-server.herokuapp.com",
   "keywords": [],
   "author": "",
   "license": "ISC",
