--- a/package.json
+++ b/package.json
@@ -19,22 +19,16 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.0",
+    "cloudinary": "^1.11.0",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
-    "es6-promisify": "^6.0.0",
     "express": "^4.16.3",
-    "fawn": "^2.1.5",
-    "firebase": "^5.5.4",
     "html-to-text": "^4.0.0",
-    "jimp": "^0.4.0",
-    "joi": "^13.6.0",
     "jsonwebtoken": "^8.3.0",
     "juice": "^4.3.2",
     "mongoose": "^5.2.6",
     "multer": "^1.3.1",
     "nodemailer": "^4.6.8",
-    "pug": "^2.0.3",
-    "sharp": "^0.20.7",
-    "uuid": "^3.3.2"
+    "pug": "^2.0.3"
   }
 }
