--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Armin Zohrabi",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.0",
